@@ -1,1 +1,6 @@
 # java-Student-Information-Management-System
+找不到Javafx的疑问解决办法
+![image](https://github.com/user-attachments/assets/ea35f032-fc54-4ccc-a300-36144a7a3f62)
+--module-path D:\javafx-sdk-17.0.12\lib --add-modules javafx.controls,javafx.fxml 
+中间的地址是自己的javafx地址，下面是添加vm方式
+![image](https://github.com/user-attachments/assets/9df26715-5175-49fe-b324-434c72f4fa6c)
